fix family routes
